Bug 247822 - Keyboard smooth scrolling animation is not disabled when NSScrollAnimationEnabled is false
Summary: Keyboard smooth scrolling animation is not disabled when NSScrollAnimationEna...
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: Scrolling (show other bugs)
Version: Other
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Nobody
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2022-11-11 13:08 PST by Richard Robinson
Modified: 2022-11-14 10:55 PST (History)
2 users (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Richard Robinson 2022-11-11 13:08:28 PST
rdar://101225956
Comment 1 Richard Robinson 2022-11-11 13:13:17 PST
Pull request: https://github.com/WebKit/WebKit/pull/6409
Comment 2 EWS 2022-11-14 10:55:17 PST
Committed 256661@main (207c359c1849): <https://commits.webkit.org/256661@main>

Reviewed commits have been landed. Closing PR #6409 and removing active labels.