Keyboard smooth scrolling animation is not disabled when `NSScrollAnimationEnabled` is `false` https://bugs.webkit.org/show_bug.cgi?id=247822 rdar://101225956

Reviewed by Simon Fraser.

Previously, setting `NSScrollAnimationEnabled` to `false` would disable all
scroll animations. However, enabling keyboard smooth scrolling regressed this
and did not respect this setting any longer.

This PR fixes this by having `EventHandlerDrivenSmoothScrolling` respect the
value of `NSScrollAnimationEnabled` so now scroll animations may once again be
disabled.

* Source/WTF/Scripts/Preferences/WebPreferencesInternal.yaml:

Canonical link: https://commits.webkit.org/256661@main